    - added LSCP command "SET FX_SEND EFFECT <sampler_channel>
      <fx_send_id> <effect_chain> <chain_pos>"
    - added LSCP command "REMOVE FX_SEND EFFECT <sampler_channel> <fx_send_id>"
    - added LSCP commands "SUBSCRIBE EFFECT_INSTANCE_COUNT",
      "SUBSCRIBE EFFECT_INSTANCE_INFO", "SUBSCRIBE SEND_EFFECT_CHAIN_COUNT",
      "SUBSCRIBE SEND_EFFECT_CHAIN_INFO"

  * Bug fixes:
    - Fixed crash which may occur when MIDI key + transpose is out of range
    - minor valgrind fixes
    - fixed crash which occurred when changing an already deployed sampler
      channel to a different engine type
    - fixed crash when deleting a sampler channel or changing engine
      type while an instrument load was in progress
    - bugfix: playing a note while changing the instrument could cause
      a crash, or give "Handing back unknown region" error messages
    - bugfix: calling SET VOICES (which Fantasia does on start and
      refresh) could cause instruments to be unloaded
    - Mac OS X: fixed name collision of enum in EffectControl and
      wrong name of destructor in AudioOutputDeviceCoreAudio.cpp
    - Mac OS X: fixed hanging threads
    - Windows: disabled the previous thread fix on non-Mac systems, as
      it caused hanging threads on Windows
    - Fixed possible crashes due to corrupted MIDI/audio device list
      after MIDI/audio device creation failure
    - When creating MIDI instrument map entries with "PERSISTENT" type, the
      instruments were uselessly precached with zero samples, however it still
      took the full preloading time and on 1st program change the respective
      instrument was completely reloaded again.
    - fixed handling of rapid bank select and program change messages
      sent to the same sampler channel (patch from the Open Octave
      project, slightly adjusted)
    - fixed crash when trying to create an effect instance with controls
      which min and/or max values depend on the sample rate
    - fixed bug #162